Playback head no longer overlaps tick mark on right edge
This looks a little better.

--- a/sass/jssynth.scss
+++ b/sass/jssynth.scss
@@ -168,7 +168,7 @@ a {
 .sequencer-step-timeline-playback-head {
   background: $orange;
   display: block;
-  width: 9px;
+  width: 8px;
   height: 9px;
 }
 
